[package]
name = "juliafatou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
image = "0.24.7"
crossbeam = "0.8"
clap = { version = "4.4.7", features = ["derive"] }
colorgrad = "0.6.2"
getrandom = "0.2.11"
